--- a/index.html
+++ b/index.html
@@ -2,24 +2,39 @@
 <html lang="uk">
 <head>
   <meta charset="utf-8">
-  <title>Осадчук Віталій</title>
-  <meta name="keywords" content="">
-  <meta name="description" content="">
+  <title>Фан-сайт Heroes III</title>
+  <meta name="keywords" content="фан-сайт, heroes">
+  <meta name="description" content="Фан-сайт гри Heroes of Might and Magic III">
   <meta name="format-detection" content="telephone=no">
-  <link type="text/css" rel="stylesheet" href="css/style.css">
+  <link type="text/css" rel="stylesheet" href="style.css">
   <script type="text/javascript" src="js/script.js"></script>
 </head>
+
 <body>
-  Астрологи оголосили тиждень прокрастинації. Кількість вкладок у браузері зросла вдвічі.
-  
-  <img src="images/logo.psd" alt="логотип heroes 3">
-  <p>Heroes<br> of Might and Magic<br> I I I</p>
+  <div class="resize">
+  <footer>
+    <div class="footer_green green">
+      <p>Астрологи оголосили тиждень прокрастинації. Кількість вкладок у браузері зросла вдвічі.</p>
+    </div>
+      <div class="footer_white">
+        <div class="logo_inner">
+          <img src="images/logo.png" alt="логотип heroes 3">
+        </div>
+          <div class="name_inner">
+            <p><span style="font-size: 50px; text-transform: uppercase">heroes</span><br><span style="font-size: 24px">of Might and Magic</span><br> <span style="font-size: 64px; text-transform: uppercase">I I I</span></p>
+          </div>
+        <div class="footer_contact">
+          <a href="#fb">Наша група у Facebook</a>
+          <a href="#Insta">Стежте за нами в Instagram</a>
+          <p>Замовте сувенірку:</p>
+          <a href="tel:+380682096694">068-209-66-94</a>
+        </div>
+      </div>
+  </footer>
 
-  <a href="#fb">Наша група у Facebook</a>
-  <a href="#Insta">Стежте за нами в Instagram</a>
-  <p>Замовте сувенірку:</p>
-  <a href="telephone:+380682096694">068-209-66-94</a>
 
+
+<div>
   <p>Фан-сайт гри Heroes of Might and Magic III</p>
 
   <p>Heroes of Might and Magic III (Heroes III, HoMM III, укр. Герої Меча і Магії III) — відеогра жанру покрокової стратегії на тематику фентезі. Розроблена компанією New World Computing як третя гра серії Heroes of Might and Magic та видана компанією 3DO 22 лютого 1999 для ОС Windows та Mac OS. Для операційних систем на основі Linux гру було випущено в 2000-му році компанією Loki Software (Вікіпедія).</p>
@@ -28,3 +43,5 @@
 
   <p>Долучайтеся до нашої спільноти фанатів цієї чудової гри!<br>
 У нас можна спілкуватися з однодумцями, ділитися фанартом, скачувати фанські карти, кампанії, моди. А ще у нас зібрано велику колекцію тематичних книжок (pdf, djvu) і матеріалів для настільних ігор PnP (print-n-play, надрукуй і грай). Також ви можете придбати сувенірну продукцію - значки, футболки, кружки, наліпки і тому подібне.</p>
+</div>
+  </div>
