--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="resize">
+  <div class="main">
   <footer>
     <div class="footer_green green">
       <p>Астрологи оголосили тиждень прокрастинації. Кількість вкладок у браузері зросла вдвічі.</p>
@@ -23,11 +23,13 @@
           <div class="name_inner">
             <p><span style="font-size: 50px; text-transform: uppercase">heroes</span><br><span style="font-size: 24px">of Might and Magic</span><br> <span style="font-size: 64px; text-transform: uppercase">I I I</span></p>
           </div>
-        <div class="footer_contact">
-          <a href="#fb">Наша група у Facebook</a>
-          <a href="#Insta">Стежте за нами в Instagram</a>
-          <p>Замовте сувенірку:</p>
-          <a href="tel:+380682096694">068-209-66-94</a>
+        <div class="social_inner">
+          <ul class="ul_none">
+            <li><a href="#fb">Наша група у Facebook</a></li>
+            <li><a href="#Insta">Стежте за нами в Instagram</a></li>
+            <li><p>Замовте сувенірку:</p></li>
+            <li><a href="tel:+380682096694">068-209-66-94</a></li>
+          </ul>
         </div>
       </div>
   </footer>
