--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 
 <body>
-  <div class="main">
-  <footer>
-    <div class="footer_green green">
+  <div class="header">
+    <div class="main">
+    <div class="header_green green">
       <p>Астрологи оголосили тиждень прокрастинації. Кількість вкладок у браузері зросла вдвічі.</p>
     </div>
-      <div class="footer_white">
+      <div class="header_white">
         <div class="logo_inner">
           <img src="images/logo.png" alt="логотип heroes 3">
         </div>
@@ -24,26 +24,44 @@
             <p><span style="font-size: 50px; text-transform: uppercase">heroes</span><br><span style="font-size: 24px">of Might and Magic</span><br> <span style="font-size: 64px; text-transform: uppercase">I I I</span></p>
           </div>
         <div class="social_inner">
-          <ul class="ul_none">
+          <ul>
             <li><a href="#fb">Наша група у Facebook</a></li>
             <li><a href="#Insta">Стежте за нами в Instagram</a></li>
-            <li><p>Замовте сувенірку:</p></li>
+            <li>Замовте сувенірку:</li>
             <li><a href="tel:+380682096694">068-209-66-94</a></li>
           </ul>
         </div>
       </div>
-  </footer>
-
-
-
-<div>
-  <p>Фан-сайт гри Heroes of Might and Magic III</p>
-
-  <p>Heroes of Might and Magic III (Heroes III, HoMM III, укр. Герої Меча і Магії III) — відеогра жанру покрокової стратегії на тематику фентезі. Розроблена компанією New World Computing як третя гра серії Heroes of Might and Magic та видана компанією 3DO 22 лютого 1999 для ОС Windows та Mac OS. Для операційних систем на основі Linux гру було випущено в 2000-му році компанією Loki Software (Вікіпедія).</p>
-
-  <img src="images/img_news.jpg" alt="скріншот з гри Heroes of Might and Magic III">
-
-  <p>Долучайтеся до нашої спільноти фанатів цієї чудової гри!<br>
-У нас можна спілкуватися з однодумцями, ділитися фанартом, скачувати фанські карти, кампанії, моди. А ще у нас зібрано велику колекцію тематичних книжок (pdf, djvu) і матеріалів для настільних ігор PnP (print-n-play, надрукуй і грай). Також ви можете придбати сувенірну продукцію - значки, футболки, кружки, наліпки і тому подібне.</p>
+  </div>
 </div>
+
+<div class="main_content main">
+  <div class="mainbar">
+    <h1>Фан-сайт гри Heroes of Might and Magic III</h1>
+
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>Heroes of Might and Magic III</strong> <span style="font-style: italic;">(Heroes III, HoMM III, укр. Герої Меча і Магії III)</span> — відеогра жанру покрокової стратегії на тематику фентезі. Розроблена компанією <a href="#" style="color: #31420B;">New World Computing</a> як третя гра серії Heroes of Might and Magic та видана компанією 3DO 22 лютого 1999 для ОС Windows та Mac OS. Для операційних систем на основі Linux гру було випущено в 2000-му році компанією Loki Software <a href="wiki" style="color: #31420B; font-style: italic;"> (Вікіпедія)</a>.</p>
+
+        <img src="images/img_news.jpg" alt="скріншот з гри Heroes of Might and Magic III">
+
+      <p>&nbsp;&nbsp;&nbsp;&nbsp;Долучайтеся до нашої спільноти фанатів цієї чудової гри!<br>
+      У нас можна спілкуватися з однодумцями, ділитися фанартом, скачувати фанські карти, кампанії, моди. А ще у нас зібрано велику колекцію тематичних книжок (pdf, djvu) і матеріалів для настільних ігор PnP (print-n-play, надрукуй і грай). Також ви можете придбати сувенірну продукцію - значки, футболки, кружки, наліпки і тому подібне.</p>
+  </div>
+
+  <div class="sidebar">
+    <p class="nav_header green">Головне меню</p>
+      <ul>
+        <li><a href="##">Канал в Телеграм</a></li>
+        <li><a href="##">Форум</a></li>
+        <li><a href="##">Фан-арт, відеороліки</a></li>
+        <li><a href="##">Карти, сценарії НоММ ІІІ</a></li>
+        <li><a href="##">Карти інших версій НоММ</a></li>
+        <li><a href="##">Модифікації</a></li>
+        <li><a href="##">Книги, правила, PnP-настолки</a></li>
+        <li><a href="##">Магазин сувенірних товарів</a></li>
+      </ul>
+  </div>
+</div>
+
+  <div class="footer green">
+    
   </div>
