structure OK - read NO

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-  <div class="header">
+  <header>
     <div class="main">
-    <div class="header_green green">
+    <div class="bg_green green">
       <p>Астрологи оголосили тиждень прокрастинації. Кількість вкладок у браузері зросла вдвічі.</p>
     </div>
       <div class="header_white">
@@ -21,7 +21,9 @@
           <img src="images/logo.png" alt="логотип heroes 3">
         </div>
           <div class="name_inner">
-            <p><span style="font-size: 50px; text-transform: uppercase">heroes</span><br><span style="font-size: 24px">of Might and Magic</span><br> <span style="font-size: 64px; text-transform: uppercase">I I I</span></p>
+            <p><span style="font-size: 50px; text-transform: uppercase">heroes</span><br>
+                <span style="font-size: 24px">of Might and Magic</span><br>
+                  <span style="font-size: 64px; text-transform: uppercase">I I I</span></p>
           </div>
         <div class="social_inner">
           <ul>
@@ -33,7 +35,7 @@
         </div>
       </div>
   </div>
-</div>
+</header>
 
 <div class="main_content main">
   <div class="mainbar">
@@ -62,6 +64,9 @@
   </div>
 </div>
 
-  <div class="footer green">
-    
-  </div>
+  <footer>
+    <div class="bg_green green main">
+      <p>&copy; Хмель-ХоММ, 2019</p>
+        <a href="mailto:poshtar.boba@gmail.com">poshtar.boba@gmail.com</a>
+    </div>
+  </footer>
