add lite format

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
   <header>
     <div class="main">
-    <div class="bg_green green">
+    <div class="green">
       <p>Астрологи оголосили тиждень прокрастинації. Кількість вкладок у браузері зросла вдвічі.</p>
     </div>
-      <div class="header_white">
+      <div class="main_content">
         <div class="logo_inner">
           <img src="images/logo.png" alt="логотип heroes 3">
         </div>
@@ -41,11 +41,11 @@
   <div class="mainbar">
     <h1>Фан-сайт гри Heroes of Might and Magic III</h1>
 
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>Heroes of Might and Magic III</strong> <span style="font-style: italic;">(Heroes III, HoMM III, укр. Герої Меча і Магії III)</span> — відеогра жанру покрокової стратегії на тематику фентезі. Розроблена компанією <a href="#" style="color: #31420B;">New World Computing</a> як третя гра серії Heroes of Might and Magic та видана компанією 3DO 22 лютого 1999 для ОС Windows та Mac OS. Для операційних систем на основі Linux гру було випущено в 2000-му році компанією Loki Software <a href="wiki" style="color: #31420B; font-style: italic;"> (Вікіпедія)</a>.</p>
+      <p><strong>Heroes of Might and Magic III</strong> <span style="font-style: italic;">(Heroes III, HoMM III, укр. Герої Меча і Магії III)</span> — відеогра жанру покрокової стратегії на тематику фентезі. Розроблена компанією <a href="#" style="color: #31420B;">New World Computing</a> як третя гра серії Heroes of Might and Magic та видана компанією 3DO 22 лютого 1999 для ОС Windows та Mac OS. Для операційних систем на основі Linux гру було випущено в 2000-му році компанією Loki Software <a href="wiki" style="color: #31420B; font-style: italic;"> (Вікіпедія)</a>.</p>
 
         <img src="images/img_news.jpg" alt="скріншот з гри Heroes of Might and Magic III">
 
-      <p>&nbsp;&nbsp;&nbsp;&nbsp;Долучайтеся до нашої спільноти фанатів цієї чудової гри!<br>
+      <p>Долучайтеся до нашої спільноти фанатів цієї чудової гри!<br>
       У нас можна спілкуватися з однодумцями, ділитися фанартом, скачувати фанські карти, кампанії, моди. А ще у нас зібрано велику колекцію тематичних книжок (pdf, djvu) і матеріалів для настільних ігор PnP (print-n-play, надрукуй і грай). Також ви можете придбати сувенірну продукцію - значки, футболки, кружки, наліпки і тому подібне.</p>
   </div>
 
@@ -65,8 +65,9 @@
 </div>
 
   <footer>
-    <div class="bg_green green main">
+    <div class="main green">
       <p>&copy; Хмель-ХоММ, 2019</p>
         <a href="mailto:poshtar.boba@gmail.com">poshtar.boba@gmail.com</a>
     </div>
   </footer>
+</body>
