--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 </head>
 
 <body>
+  <div class="white">
   <header>
-    <div class="main">
+    <div class="clear">
     <div class="green">
       <p>Астрологи оголосили тиждень прокрастинації. Кількість вкладок у браузері зросла вдвічі.</p>
     </div>
@@ -37,7 +38,7 @@
   </div>
 </header>
 
-<div class="main_content main">
+<div class="main_content clear">
   <div class="mainbar">
     <h1>Фан-сайт гри Heroes of Might and Magic III</h1>
 
@@ -50,7 +51,8 @@
   </div>
 
   <div class="sidebar">
-    <p class="nav_header green">Головне меню</p>
+    <p class="nav_header">Головне меню</p>
+      <div class="menu">
       <ul>
         <li><a href="##">Канал в Телеграм</a></li>
         <li><a href="##">Форум</a></li>
@@ -61,13 +63,15 @@
         <li><a href="##">Книги, правила, PnP-настолки</a></li>
         <li><a href="##">Магазин сувенірних товарів</a></li>
       </ul>
+      </div>
   </div>
 </div>
 
   <footer>
-    <div class="main green">
+    <div class="clear green">
       <p>&copy; Хмель-ХоММ, 2019</p>
         <a href="mailto:poshtar.boba@gmail.com">poshtar.boba@gmail.com</a>
     </div>
   </footer>
+</div>
 </body>
